# aggfly

./: .gitignore  CLAUDE.md  CLI_PLAN.md  README.md  aggfly-dev-environment.yml  environment.yml  modernization_baseline.md  plan.md  pyproject.toml  requirements.txt  setup.py  test_giovanni_original.ipynb  test_giovanni_year.ipynb
aggfly/: __init__.py  scratch.py  utils.py
aggfly/aggregate/: __init__.py  aggregate.py  aggregate_utils.py  nb_kernels.py  spatial-Copy1.py  spatial.py  temporal.py
aggfly/aggregate/z_old/: temporal-Copy1.py
aggfly/cache/: __init__.py  project_cache.py
aggfly/cli/: __init__.py  config.py  info.py  main.py  pipeline.py  preprocess.py
aggfly/climate/: ClimateGrid.py  climate_dataset.py  gridfuncs.py
aggfly/dataset/: Untitled.ipynb  __init__.py  dataset.py  grid.py  grid_utils.py  zarr_convert.py
aggfly/grid_weights/: __init__.py  crop_weights.py  grid_weights.py  pop_weights.py
aggfly/regions/: GeoRegions.py  __init__.py  georegions.py  shp_utils.py
aggfly/tests/: __init__.py  test_aggregate.py  test_cli.py
aggfly/weights/: __init__.py  crop_weights.py  grid_weights.py  pop_weights.py  secondary_weights.py
aggregate/: ClimateAggregator.py  CropWeights.py  GeoRegions.py  SpatialAggregator.py  consolidate.py  shpfuncs.py
benchmarks/: bench_engine.py  bench_fusion.py  bench_groupby.py  bench_read_scheduler.py  bench_ref_zarr3.py  bench_sjoin.py  bench_weights.py  profile_grace.py  profile_netcdf.py  profile_netcdf_zarr.py  profile_temporal.py
benchmarks/data/: usa_simple_noHI.shp
data/shapefiles/: usa_simple_noHI.dbf
docs/: api.md  cli.md  concepts.md  index.md  installation.md
docs/guide/: aggregation.md  calendars.md  execution.md  quickstart.md  weights.md
examples/: era5_counties_area.yaml  era5_counties_pop.yaml
examples/notebooks/: quickstart_public_data.ipynb
examples/notebooks/aggfly_example_data/: config.yaml
internal/: modernization-baseline.md
notebooks/: run_t2m_era5-rev.ipynb  run_t2m_era5.ipynb  run_t2m_era5_multi-cotton.ipynb  run_t2m_era5_multi-soy.ipynb  run_t2m_era5_multi.ipynb  run_t2m_era5_multi_example.ipynb  run_t2m_era5_sine.ipynb  run_t2m_us-counties_example.ipynb  run_tp_era5-cotton.ipynb  run_tp_era5-soy.ipynb  run_tp_era5.ipynb
notebooks/giovanni_example/: giovanni_run_t2m_us-counties_example.py
notebooks/giovanni_example/Code/: counties_example.ipynb  download_new_era5.ipynb  test_giovanni_original.ipynb  test_giovanni_population.ipynb  test_giovanni_population_dth-edit.ipynb  test_giovanni_year.ipynb
notebooks/giovanni_example/Data/: gpw-v4-population-count-rev11_2000_2pt5_min_tif.zip.1  usa_simple_noHI.shx
notebooks/giovanni_example/tmp/GridWeights/mod-2471544ba9b04f1/: c2d709b1733d84f.feather  mod.yaml
notebooks/giovanni_example/tmp/GridWeights/mod-40f86bbfc94b3dd/: c2d709b1733d84f.feather  mod.yaml
notebooks/giovanni_example/tmp/GridWeights/mod-45c5e3ffb1bf48f/: mod.yaml
notebooks/giovanni_example/tmp/GridWeights/mod-657e1a54f68fb79/: mod.yaml
notebooks/giovanni_example/tmp/GridWeights/mod-8700f314761fa0a/: c2d709b1733d84f.feather  c2d709b1733d84f.yaml  mod.yaml
notebooks/giovanni_example/tmp/GridWeights/mod-9c23708f3e79a8e/: c2d709b1733d84f.feather  mod.yaml
notebooks/giovanni_example/tmp/GridWeights/mod-9db58eeda47b526/: c2d709b1733d84f.feather  mod.yaml
notebooks/giovanni_example/tmp/GridWeights/mod-a2fa9f7e6e9f4d3/: mod.yaml
notebooks/giovanni_example/tmp/GridWeights/mod-ecba5793c975455/: mod.yaml
notebooks/giovanni_example/tmp/GridWeights/mod-fea56a57398ee80/: c2d709b1733d84f.feather  mod.yaml
notebooks/tb/: TBrun_prec_era5.ipynb  TBrun_t2m_era5.ipynb
