[tool.poetry]
name = "aggfly"
version = "0.1.4"
description = "Efficient spatial and temporal aggregation of gridded climate data"
authors = ["Dylan Hogan <dth2133@columbia.edu>"]
readme = "README.md"
packages = [{include = "aggfly"}]


# 3.12.3 causing issues with dask and dask-geopandas
# updates to dask causing issues for dask-geopandas
# So can't update dask-geopandas until they release an update compatible with
# latest dask dataframe changes, at which point we can upgrade all, hopefully
# https://github.com/geopandas/dask-geopandas/issues/284
# https://github.com/geopandas/dask-geopandas/issues/289
[tool.poetry.dependencies]
python = ">=3.11.6, <3.12.3"
dask = "^2023.11.0"
numpy = "^1.26.4"
geopandas = "^0.14.4"
dill = "^0.3.8"
pyyaml = "^6.0.1"
rasterio = "^1.3.10"
pandas = "^2.2.2"
xarray = "^2024.5.0"
zarr = "^2.18.2"
dask-geopandas = "^0.3.1"
pytest = "^8.2.1"
netcdf4 = "^1.6.5"
numba = "^0.59.1"
matplotlib = "^3.9.0"
rioxarray = "^0.15.5"
shapely = "^2.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"