[tool.poetry]
name = "aggfly"
version = "0.1.4"
description = "Efficient spatial and temporal aggregation of gridded climate data"
authors = ["Dylan Hogan <dth2133@columbia.edu>"]
readme = "README.md"
packages = [{include = "aggfly"}]


# Modernized 2026-07. The old narrow pin (python <3.12.3, dask ^2023.11) existed only
# because dask-geopandas lagged dask's dataframe changes (issues #284/#289) and broke at
# 3.12.3. dask-geopandas has been removed from aggfly entirely — its only uses were two
# point-in-polygon sjoins that are faster as plain geopandas (see benchmarks/bench_sjoin.py)
# — so that coupling is gone and the stack moves to current majors (numpy 2, pandas 3,
# zarr 3, geopandas 1, xarray/dask CalVer). CalVer packages use ">=" because a caret would
# wrongly cap at the release year (^2025.x excludes 2026.x).
[tool.poetry.dependencies]
python = ">=3.11,<3.14"
dask = {extras = ["distributed"], version = ">=2025.1.0"}
numpy = ">=2.0,<3.0"
geopandas = ">=1.0,<2.0"
dill = ">=0.3.8"
pyyaml = ">=6.0"
rasterio = ">=1.4,<2.0"
pandas = ">=2.2,<4.0"
xarray = ">=2025.1.0"
zarr = ">=3.0,<4.0"
pytest = ">=8.0"
netcdf4 = ">=1.6"
numba = ">=0.60,<1.0"
matplotlib = ">=3.9"
rioxarray = ">=0.16"
shapely = ">=2.0,<3.0"
click = ">=8.1,<9.0"
pyarrow = ">=15.0"

[tool.poetry.scripts]
aggfly = "aggfly.cli.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"