[project]
name = "aggfly"
version = "0.2.0"
description = "Efficient spatial and temporal aggregation of gridded climate data"
authors = [{name = "Dylan Hogan", email = "dth2133@columbia.edu"}]
readme = "README.md"

# Modernized 2026-07. The old narrow pin (python <3.12.3, dask ^2023.11) existed only
# because dask-geopandas lagged dask's dataframe changes (issues #284/#289) and broke at
# 3.12.3. dask-geopandas has been removed from aggfly entirely — its only uses were two
# point-in-polygon sjoins that are faster as plain geopandas (see benchmarks/bench_sjoin.py)
# — so that coupling is gone and the stack moves to current majors (numpy 2, pandas 3,
# zarr 3, geopandas 1, xarray/dask CalVer). CalVer packages use ">=" because a caret would
# wrongly cap at the release year (^2025.x excludes 2026.x).
requires-python = ">=3.11,<3.14"
dependencies = [
    "dask[distributed]>=2025.1.0",
    "numpy>=2.0,<3.0",
    "geopandas>=1.0,<2.0",
    "dill>=0.3.8",
    "pyyaml>=6.0",
    "rasterio>=1.4,<2.0",
    "pandas>=2.2,<4.0",
    "xarray>=2025.1.0",
    "zarr>=3.0,<4.0",
    "netcdf4>=1.6",
    "numba>=0.60,<1.0",
    "matplotlib>=3.9",
    "rioxarray>=0.16",
    "shapely>=2.0,<3.0",
    "click>=8.1,<9.0",
    "pyarrow>=15.0",
]

# Cloud object-store backends. aggfly never imports these directly: xarray ->
# zarr -> fsspec dispatches on the URL scheme, so the right package merely has
# to be installed. They are extras rather than hard dependencies because gcsfs
# alone pulls in ~38 packages (grpcio, cryptography, aiohttp) that a user
# reading local NetCDF/Zarr never needs.
[project.optional-dependencies]
gcs = ["gcsfs>=2024.1"]
s3 = ["s3fs>=2024.1"]
cloud = ["gcsfs>=2024.1", "s3fs>=2024.1"]

[project.scripts]
aggfly = "aggfly.cli.main:cli"

[dependency-groups]
dev = [
    "gcsfs>=2026.7.0",
    "ipykernel>=7.3.0",
    "pip>=26.1.2",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aggfly"]

# Hatchling's default sdist sweeps the whole project root, which pulled in the
# presentation PDF, scratch notebooks, internal planning docs, benchmark data
# and .claude/settings.local.json. Poetry's `packages = [{include = "aggfly"}]`
# had scoped this implicitly. Keep the sdist to the package plus metadata.
[tool.hatch.build.targets.sdist]
include = [
    "/aggfly",
    "/README.md",
    "/LICENSE",
]
